add user display name to sessionInfo add save on call allowance code - in process

--- a/arui/WebContent/index.html
+++ b/arui/WebContent/index.html
@@ -41,7 +41,7 @@
 						}).done(function(data){
 							if (data && !data.error) {
 							    util.sessionInfo = data;
-							    userName = util.sessionInfo.userFullName;
+							    userName = util.sessionInfo.userDisplayName;
 							} else {
 								alert("You don't have permission to access!", {styleClass: "srMessageBoxStyle srMessageBoxError"});
 							}
