--- a/arui/WebContent/index.html
+++ b/arui/WebContent/index.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="js/util.js"></script>
 	<!-- Bootstrapping UI5 -->
 	<script id="sap-ui-bootstrap"
-			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+			src="https://sapui5.hana.ondemand.com/1.58.3/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_bluecrystal"
 			data-sap-ui-compatVersion="edge"
