--- a/ar/src/main/java/META-INF/approval-request-template.html
+++ b/ar/src/main/java/META-INF/approval-request-template.html
@@ -233,14 +233,14 @@ div.WordSection1
   <table class=MsoNormalTable border=0 cellspacing=0 cellpadding=0
    style='border-collapse:collapse;mso-yfti-tbllook:1184;mso-padding-alt:0cm 0cm 0cm 0cm'>
    <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes'>
-    <td width=132 valign=top style='width:98.7pt;border:solid #A5A5A5 1.0pt;
+    <td width=70 valign=top style='width:98.7pt;border:solid #A5A5A5 1.0pt;
     border-right:none;background:#5B9BD5;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal align=center style='margin-top:5.0pt;margin-right:0cm;
     margin-bottom:5.0pt;margin-left:0cm;text-align:center'><b><span lang=EN-US
     style='font-size:10.0pt;line-height:115%;font-family:"Arial",sans-serif;
     color:white'>iNumber</span></b></p>
     </td>
-    <td width=413 valign=top style='width:310.05pt;border-top:solid #A5A5A5 1.0pt;
+    <td width=100 valign=top style='width:310.05pt;border-top:solid #A5A5A5 1.0pt;
     border-left:none;border-bottom:solid #A5A5A5 1.0pt;border-right:none;
     background:#5B9BD5;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal align=center style='margin-top:5.0pt;margin-right:0cm;
@@ -248,20 +248,50 @@ div.WordSection1
     style='font-size:10.0pt;line-height:115%;font-family:"Arial",sans-serif;
     color:white;mso-ansi-language:EN-GB'>Employee name</span></b></p>
     </td>
+    <td width=100 valign=top style='width:310.05pt;border-top:solid #A5A5A5 1.0pt;
+    border-left:none;border-bottom:solid #A5A5A5 1.0pt;border-right:none;
+    background:#5B9BD5;padding:0cm 5.4pt 0cm 5.4pt'>
+    <p class=MsoNormal align=center style='margin-top:5.0pt;margin-right:0cm;
+    margin-bottom:5.0pt;margin-left:0cm;text-align:center'><b><span lang=EN-GB
+    style='font-size:10.0pt;line-height:115%;font-family:"Arial",sans-serif;
+    color:white;mso-ansi-language:EN-GB'>On call Date</span></b></p>
+    </td>
+    <td width=100 valign=top style='width:310.05pt;border-top:solid #A5A5A5 1.0pt;
+    border-left:none;border-bottom:solid #A5A5A5 1.0pt;border-right:none;
+    background:#5B9BD5;padding:0cm 5.4pt 0cm 5.4pt'>
+    <p class=MsoNormal align=center style='margin-top:5.0pt;margin-right:0cm;
+    margin-bottom:5.0pt;margin-left:0cm;text-align:center'><b><span lang=EN-GB
+    style='font-size:10.0pt;line-height:115%;font-family:"Arial",sans-serif;
+    color:white;mso-ansi-language:EN-GB'>On call hours</span></b></p>
+    </td>
    </tr>
    <tr style='mso-yfti-irow:1;mso-yfti-lastrow:yes'>
-    <td width=132 valign=top style='width:98.7pt;border:solid #C9C9C9 1.0pt;
+    <td width=70 valign=top style='width:98.7pt;border:solid #C9C9C9 1.0pt;
     border-top:none;background:#F2F2F2;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-top:5.0pt;margin-right:0cm;margin-bottom:
     5.0pt;margin-left:0cm'><span lang=EN-GB style='font-size:10.0pt;line-height:
     115%;font-family:"Arial",sans-serif;color:#F3AD00;mso-ansi-language:EN-GB'>@iNumber</span></p>
     </td>
-    <td width=413 valign=top style='width:310.05pt;border-top:none;border-left:
+    <td width=100 valign=top style='width:310.05pt;border-top:none;border-left:
     none;border-bottom:solid #C9C9C9 1.0pt;border-right:solid #C9C9C9 1.0pt;
     background:#F2F2F2;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-top:5.0pt;margin-right:0cm;margin-bottom:
     5.0pt;margin-left:0cm'><span lang=EN-GB style='font-size:10.0pt;line-height:
     115%;font-family:"Arial",sans-serif;color:#F3AD00;mso-ansi-language:EN-GB'>@empName</span></p>
+    </td>
+    <td width=100 valign=top style='width:310.05pt;border-top:none;border-left:
+    none;border-bottom:solid #C9C9C9 1.0pt;border-right:solid #C9C9C9 1.0pt;
+    background:#F2F2F2;padding:0cm 5.4pt 0cm 5.4pt'>
+    <p class=MsoNormal style='margin-top:5.0pt;margin-right:0cm;margin-bottom:
+    5.0pt;margin-left:0cm'><span lang=EN-GB style='font-size:10.0pt;line-height:
+    115%;font-family:"Arial",sans-serif;color:#F3AD00;mso-ansi-language:EN-GB'>@oncallDate</span></p>
+    </td>
+    <td width=100 valign=top style='width:310.05pt;border-top:none;border-left:
+    none;border-bottom:solid #C9C9C9 1.0pt;border-right:solid #C9C9C9 1.0pt;
+    background:#F2F2F2;padding:0cm 5.4pt 0cm 5.4pt'>
+    <p class=MsoNormal style='margin-top:5.0pt;margin-right:0cm;margin-bottom:
+    5.0pt;margin-left:0cm'><span lang=EN-GB style='font-size:10.0pt;line-height:
+    115%;font-family:"Arial",sans-serif;color:#F3AD00;mso-ansi-language:EN-GB'>@oncallHours</span></p>
     </td>
    </tr>
   </table>
