--- a/ar/src/main/java/META-INF/rejected-request-template.html
+++ b/ar/src/main/java/META-INF/rejected-request-template.html
@@ -224,7 +224,7 @@ div.WordSection1
   <p style='margin-top:0cm'><b><span lang=EN-AU style='font-size:13.0pt;
   color:#222222;mso-ansi-language:EN-AU'><br>
   </span></b><strong><span lang=EN-GB style='font-size:10.0pt;font-family:"Arial",sans-serif;
-  color:windowtext;mso-ansi-language:EN-GB'>Dear @<span class=SpellE>empName</span></span></strong></p>
+  color:windowtext;mso-ansi-language:EN-GB'>Dear @receiver</span></strong></p>
   <p class=MsoNormal style='margin-top:5.0pt;margin-right:0cm;margin-bottom:
   5.0pt;margin-left:0cm'><span lang=EN-GB style='font-size:10.0pt;line-height:
   115%;font-family:"Arial",sans-serif;mso-ansi-language:EN-GB'>&nbsp;</span></p>
